src/test/ui/error-codes/E0718.stderr
error[E0718]: `arc` language item must be applied to a struct
  --> $DIR/E0718.rs:4:1
   |
LL | #[lang = "arc"] //~ ERROR language item must be applied to a struct
   | ^^^^^^^^^^^^^^^ attribute should be applied to a struct, not a static item

error: aborting due to previous error

For more information about this error, try `rustc --explain E0718`.
